# flip-rs

./: Cargo.toml  watch.sh
src/: main.rs  mtechMono.icon
