cargo-features = ["different-binary-name"]

[package]
name = "flip-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "flip-rs"
filename = "flip-rs.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.15.0", features = ["alloc"]}
flipperzero-sys = { version = "0.15.0" }
flipperzero-rt = { version = "0.15.0" }
flipperzero-alloc = "0.15.0"
